# InfiniOps

./: CMakeLists.txt  CONTRIBUTING.md  pyproject.toml
examples/: runtime_api.h
scripts/: generate_torch_ops.py  generate_wrappers.py  torch_ops.yaml
src/: CMakeLists.txt  data_type.h  operator.h  pybind11_utils.h
src/ascend/: graph_cleanup_.h  workspace_pool_.h
src/ascend/flash_attention/: kernel.h
src/ascend/linear/: kernel.h
src/ascend/mha_fwd_kvcache/: kernel.h
src/ascend/mha_varlen_fwd/: kernel.h
src/ascend/rotary_embedding/: kernel.h  kernel_atb.h
src/ascend/scaled_softmax/: kernel.h
src/ascend/top_k_top_p_sampler/: kernel_atb.h
src/ascend/topk_topp_sampling/: kernel_atb.h
src/base/: add.h  add_rms_norm.h  apply_rotary_pos_emb.h  cat.h  embedding.h  flash_attention.h  linear.h  mha_fwd_kvcache.h  mha_varlen_fwd.h  mul.h  paged_attention.h  reshape_and_cache.h  rotary_embedding.h  scaled_softmax.h  silu_and_mul.h  top_k_top_p_sampler.h  topk_topp_sampling.h
src/common/: generic_utils.h
src/cpu/scaled_softmax/: scaled_softmax.h
src/native/ascend/: atb_common_.h  common.h  data_type_.h  device_.h  runtime_.h  workspace_pool_.h
src/native/ascend/custom/: .clang-tidy  CMakeLists.txt  build.sh  ops.h  torch_binding.cpp
src/native/ascend/custom/add_rms_norm/: CMakeLists.txt
src/native/ascend/custom/add_rms_norm/op_host/: add_rms_norm.cpp
src/native/ascend/custom/add_rms_norm/op_kernel/: .clang-tidy  add_rms_norm.cpp
src/native/ascend/custom/cmake/: config_ascend.cmake  config_envs.cmake  detect_soc.cmake
src/native/ascend/custom/rms_norm/: CMakeLists.txt
src/native/ascend/custom/rms_norm/op_host/: rms_norm.cpp
src/native/ascend/custom/rms_norm/op_kernel/: rms_norm.cpp
src/native/ascend/custom/utils/: torch_kernel_helper.h
src/native/ascend/ops/: fia_common_.h  graph_cleanup_.h
src/native/ascend/ops/add/: kernel.h
src/native/ascend/ops/add_rms_norm/: kernel.h  kernel_custom.h  kernel_fused.h
src/native/ascend/ops/apply_rotary_pos_emb/: kernel.h  kernel_atb.h
src/native/ascend/ops/cast/: kernel.h
src/native/ascend/ops/cat/: kernel.h
src/native/ascend/ops/causal_softmax/: kernel.h
src/native/ascend/ops/embedding/: kernel.h
src/native/ascend/ops/flash_attention/: kernel.h
src/native/ascend/ops/gemm/: kernel.h
src/native/ascend/ops/linear/: kernel.h
src/native/ascend/ops/matmul/: kernel.h
src/native/ascend/ops/mha_fwd_kvcache/: kernel.h
src/native/ascend/ops/mha_varlen_fwd/: kernel.h
src/native/ascend/ops/mul/: kernel.h
src/native/ascend/ops/paged_attention/: kernel_atb.h
src/native/ascend/ops/reshape_and_cache/: kernel.h  kernel_atb.h  kernel_v2.h
src/native/ascend/ops/rms_norm/: kernel.h  kernel_custom.h
src/native/ascend/ops/rotary_embedding/: kernel.h  kernel_atb.h  kernel_sincos_cache.h
src/native/ascend/ops/scaled_softmax/: kernel.h
src/native/ascend/ops/silu_and_mul/: kernel.h
src/native/ascend/ops/swiglu/: kernel.h  kernel_fused.h
src/native/ascend/ops/top_k_top_p_sampler/: kernel.h  kernel_atb.h
src/native/ascend/ops/topk_topp_sampling/: kernel_atb.h
src/native/cambricon/: common.h  data_type_.h  device_.h  runtime_.h
src/native/cambricon/ops/gemm/: cnblas.h
src/native/cambricon/ops/rms_norm/: kernel.mlu  rms_norm.h
src/native/cpu/: caster_.h  data_type_.h  device_.h  runtime_.h
src/native/cpu/ops/add/: add.h
src/native/cpu/ops/cast/: cast.h
src/native/cpu/ops/cat/: cat.h
src/native/cpu/ops/causal_softmax/: causal_softmax.h
src/native/cpu/ops/gemm/: gemm.h
src/native/cpu/ops/linear/: linear.h
src/native/cpu/ops/mul/: mul.h
src/native/cpu/ops/rms_norm/: rms_norm.h
src/native/cpu/ops/swiglu/: swiglu.h
src/native/cpu/ops/top_k_top_p_sampler/: top_k_top_p_sampler.h
src/native/cuda/: blas.h  blas_utils.h  caster.cuh  kernel_commons.cuh  runtime_.h  runtime_utils.h
src/native/cuda/iluvatar/: blas.h  blas_utils.h  caster.cuh  data_type_.h  device_.h  device_property.h  runtime_.h  runtime_utils.h
src/native/cuda/iluvatar/ops/add/: kernel.h
src/native/cuda/iluvatar/ops/causal_softmax/: kernel.h
src/native/cuda/iluvatar/ops/gemm/: cublas.h
src/native/cuda/iluvatar/ops/rms_norm/: kernel.h
src/native/cuda/iluvatar/ops/swiglu/: kernel.h
src/native/cuda/metax/: blas.h  blas_utils.h  caster.cuh  data_type_.h  device_.h  device_property.h  runtime_.h  runtime_utils.h
src/native/cuda/metax/ops/add/: kernel.h
src/native/cuda/metax/ops/causal_softmax/: kernel.h
src/native/cuda/metax/ops/gemm/: mcblas.h
src/native/cuda/metax/ops/rms_norm/: kernel.h
src/native/cuda/metax/ops/swiglu/: kernel.h
src/native/cuda/moore/: blas.h  blas_utils.h  caster.cuh  data_type_.h  device_.h  device_property.h  polyfills.cuh  runtime_.h  runtime_utils.h
src/native/cuda/moore/ops/add/: kernel.h
src/native/cuda/moore/ops/causal_softmax/: kernel.h
src/native/cuda/moore/ops/gemm/: mublas.h
src/native/cuda/moore/ops/rms_norm/: kernel.h
src/native/cuda/moore/ops/swiglu/: kernel.h
src/native/cuda/nvidia/: blas.h  blas_utils.h  caster.cuh  data_type_.h  device_.h  device_property.h  runtime_.h  runtime_utils.h
src/native/cuda/nvidia/ops/add/: kernel.h
src/native/cuda/nvidia/ops/causal_softmax/: kernel.h
src/native/cuda/nvidia/ops/gemm/: cublas.h  cublaslt.h
src/native/cuda/nvidia/ops/rms_norm/: kernel.h
src/native/cuda/nvidia/ops/swiglu/: kernel.h
src/native/cuda/ops/add/: kernel.cuh  kernel.h
src/native/cuda/ops/causal_softmax/: kernel.cuh  kernel.h
src/native/cuda/ops/gemm/: blas.h
src/native/cuda/ops/rms_norm/: kernel.cuh  kernel.h
src/native/cuda/ops/swiglu/: kernel.cuh  kernel.h
src/torch/ops/add/: add.cc  add.h
src/torch/ops/gemm/: gemm.cc  gemm.h
tests/: conftest.py  test_add_rms_norm.py  test_apply_rotary_pos_emb.py  test_ascend_graph_cleanup.py  test_embedding.py  test_flash_attention.py  test_gemm.py  test_generate_torch_ops.py  test_generate_wrappers.py  test_linear.py  test_mha_fwd_kvcache.py  test_mha_varlen_fwd.py  test_paged_attention.py  test_reshape_and_cache.py  test_rotary_embedding.py  test_scaled_softmax.py  utils.py  (+4 more)
