[build-system]
requires = ["scikit-build-core", "pybind11", "libclang", "pyyaml"]
build-backend = "scikit_build_core.build"

[project]
name = "InfiniOps"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist", "ruff", "torch", "pyyaml"]

[tool.scikit-build.wheel]
install-dir = "infini"

[tool.scikit-build.cmake.define]
AUTO_DETECT_DEVICES = "ON"
AUTO_DETECT_BACKENDS = "ON"
GENERATE_PYTHON_BINDINGS = "ON"

# Enables `compile_commands.json` under `SKBUILD_BUILD_DIR` (or the default
# `scikit-build` build dir) for `clang-tidy -p <build-dir> <file>` used by
# the `code-lint` skill.
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
